--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
-  "name": "create-flexi-app",
-  "version": "1.0.0",
+  "name": "create-venzo-app",
+  "version": "1.0.1",
   "description": "A react boilerplate cli tool",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel index.html",
-    "build": "parcel build index.js"
+    "build": "tsc",
+    "dev": "ts-node src/index",
+    "start": "node ./build/index"
   },
   "bin": {
-    "create-boilerplate": "./create-app.js"
+    "create-venzo-app": "./build/index.js"
   },
   "author": "Vasanth",
   "license": "ISC",
   "devDependencies": {
-    "parcel-bundler": "^1.12.5"
+    "@tsconfig/node12": "^12.1.0",
+    "@tsconfig/node20": "^20.1.2",
+    "@types/node": "^20.8.10",
+    "@types/prompts": "^2.4.7",
+    "@types/shelljs": "^0.8.14",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "prompts": "^2.4.2",
+    "request": "^2.88.2",
+    "shelljs": "^0.8.5"
   }
 }
